Added download QR code feature

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <div class="container">
     <div class="header">
@@ -72,10 +74,15 @@
 
     <div class="card result" id="resultCard">
       <h2 style="margin-bottom: 1.5rem;">✅ QR Code Generated!</h2>
-      
+
       <div class="qr-code">
         <img id="qrImage" src="" alt="QR Code">
       </div>
+
+      <button class="btn btn-primary" id="downloadQrBtn" style="margin: 1rem auto; display: block;">
+        <span>📥</span>
+        <span>Download QR Code</span>
+      </button>
 
       <div class="share-url">
         <input type="text" id="shareUrlInput" readonly>
@@ -110,4 +117,5 @@
 
   <script src="/js/upload.js"></script>
 </body>
+
 </html>
